<resources>
    <string name="app_name">IB2026 DanielFJ</string>
    <string name="facturas">Facturas</string>
    <string name="mis_facturas">Mis facturas</string>
    <string name="direccion">C/ PALMA - ARTA KM 49, 5 , 4ºA -PINTO - MADRID</string>
    <string name="luz">Luz</string>
    <string name="gas">Gas</string>
    <string name="ultima_factura">Última factura</string>
    <string name="tipo_de_icono">Tipo de icono</string>
    <string name="factura_luz">Factura Luz</string>
    <string name="historico_de_facturas">Histórico de facturas</string>
    <string name="filtrar">Filtrar</string>
    <string name="_2024">2024</string>
    <string name="atras"><u>Atrás</u></string>
    <string name="flecha">Flecha</string>
    <string name="local">Local</string>
</resources>